--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crud-react",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "homepage": "https://SachinJoshiTest.github.io/crud-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
